--- a/example_stylesheet.css
+++ b/example_stylesheet.css
@@ -38,15 +38,26 @@ p.spring{
     color:green;
 }
 
-a:link,a:visited{
-    color:green;
+.navbar ul{
+    list-style-type: none;
+    background-color: hsl(0, 0%, 25%);
+    padding: 0%;
+    margin: 0px;
+    overflow: hidden;
 }
 
-
-a:hover{
-    color:greenyellow;
+.navbar a{
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
 }
 
-a:active{
-    color:blue;
+.navbar a:hover{
+    background-color: hsl(0, 0%, 10%);
+}
+
+.navbar li{
+    float: left;
 }
